--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,38 @@
-.container {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-  background-color: white;
-  border-radius: 3rem;
-  padding: 1rem;
-  width: 50%;
-}
-
-input[type="range"] {
-  width: 100%;
-}
-
-.input {
-  margin: 1rem;
-}
-
-.input > * {
-  margin-top: 0rem;
-  margin-bottom: 0.2rem;
-}
-
-.label {
-  margin-bottom: 1rem;
-}
-
-.errormsg {
-  margin: 2rem;
+.App {
   text-align: center;
-  color: rgba(0, 0, 0, 0.342);
-  font-size: xx-large;
 }
 
-.tweet-list {
-  margin-top: 2rem;
-  height: 30rem;
-  overflow: scroll;
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
