--- a/client/src/components/KeywordFrontEnd.css
+++ b/client/src/components/KeywordFrontEnd.css
@@ -1,42 +1,15 @@
-.item1 {
-  grid-area: term;
+.tweets {
+  width: 100%;
+  height: 5%;
+  overflow: auto;
 }
 
-.item2 {
-  grid-area: search;
-  color: white;
-}
-
-.item3 {
-  grid-area: sentiment;
-  color: white;
-}
-
-.item4 {
-  grid-area: graficoa;
-}
-
-.item5 {
-  grid-area: graficob;
-}
-
-.item6 {
-  grid-area: tweet;
-}
-
-.searchedView {
-  display: grid;
-  grid-template-areas:
-    "term term"
-    "search sentiment"
-    "graficoa graficob"
-    "tweet tweet";
-  grid-gap: 10px;
-  padding: 10px;
-}
-
-.grid-container div {
-  text-align: center;
-  padding: 20px 0;
-  font-size: 30px;
+.line-chart,
+.pie-chart,
+.sentiment {
+  border-radius: 0.35%;
+  border-style: solid;
+  border-color: white;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
