--- a/client/src/components/Tweet.css
+++ b/client/src/components/Tweet.css
@@ -30,6 +30,7 @@
   border-radius: 50%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-right: 1rem;
+  object-fit: contain;
 }
 
 .user-name {
