--- a/client/src/components/StreamingTweet.css
+++ b/client/src/components/StreamingTweet.css
@@ -14,3 +14,12 @@
     color: white;
   }
 }
+
+.chart-container {
+  border-radius: 0.35%;
+  border-style: solid;
+  border-color: white;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin: 2%;
+}
